--- a/man_1_simple_shell.1
+++ b/man_1_simple_shell.1
@@ -1,20 +1,21 @@
 .TH man_1_simple_shell 1 "2024 - 08 - 17" "1.0" "shell manual"
 
 .SH NAME
-simple shell - designed to provide fundamental shell functionalities.
+hsh - Holberton-SHell
 
 .SH SYNOPSIS
-.B #include "main.h"
+.B #include "shell.h"
 .sp
-.B ./hsh
+.B ./hsh [options] [file]
 .sp
-.B #cisfun /bin/comand
+.B #cisfun /bin/comand [options] [file]
 
 .SH DESCRIPTION
-.\" Aquí va la descripción de tu shell.
+hsh is a simple shell designed to provide fundamental shell functionalities.
 
 .SH EXAMPLES
-.\" Aquí van ejemplos de uso.
+/bin/ls
+ls -la
 
 .SH REFERENCES
 .sp
