--- a/man_1_simple_shell.1
+++ b/man_1_simple_shell.1
@@ -14,8 +14,9 @@ hsh - Holberton-SHell
 hsh is a simple shell designed to provide fundamental shell functionalities.
 
 .SH EXAMPLES
-/bin/ls
-ls -la
+
+.B ./hsh
+#cisfun$ ls
 
 .SH REFERENCES
 .sp
